src/index.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  background-color: #181818;
  color: rgba(255, 255, 255, 0.87);
  color-scheme: light;
  font-family: "DM Sans", Helvetica, Arial, sans-serif;
  font-synthesis: none;
  font-weight: 400;
  line-height: 1.5;
  text-rendering: optimizeLegibility;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

@media (prefers-color-scheme: light) {
  :root {
    background-color: #f8f8f8;
    color: #181818;
  }
}

html {
  min-height: 100%;
}

body {
  @apply bg-background min-h-[100vh];
}

.button {
  @apply bg-blue-700 text-white font-medium py-1 px-6 rounded-full text-lg;
}

.button:hover {
  @apply bg-blue-400;
}

.button-gradient {
  @apply bg-gradient-to-r from-primary-200 to-primary-300 text-gray-800;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.button-gradient {
  background: linear-gradient(to right, rgb(157, 207, 253), rgb(23, 127, 224));
  background-size: 200% 200%;
  transition: background-size 0.5s ease;
}

.button-gradient:hover {
  animation: gradient 1s ease;
  background-size: 200% 200%;
}

.button-gray {
  @apply bg-gray-400;
}

.button-gray:hover {
  @apply bg-gray-600;
}

body.scrolled .site-header {
  box-shadow: 0 3px 2px 0 rgb(0 0 0 / 0.08);
  @apply md:shadow-none lg:shadow-md;
}

body.scrolled-360 .site-header {
  @apply shadow-none lg:shadow-md;
}

body.scrolled-360 .filters-row-mobile {
  @apply top-[60px] left-0 w-full px-3;
  box-shadow: 0 3px 2px 0 rgb(0 0 0 / 0.08);
  position: fixed;
}

body.scrolled .filters-row-mobile {
  @apply md:shadow-md;
}

body.scrolled-360.modal-open .filters-row-mobile {
  position: relative;
}

.map-wrapper .mapboxgl-map {
  @apply !h-[360px] !w-full;
  @apply md:!h-[calc(100vh-190px)];
  @apply lg:!h-[calc(100vh-150px)];
}

.asset-card {
  /* box-shadow: 0 4px 4px 0 rgb(0 0 0 / 0.25); */
  box-shadow: 0 4px 6px 0 rgb(46 95 169 / 0.08);
}

